fixed spacing problem between video and questions

--- a/sass/sensing_evolution.scss
+++ b/sass/sensing_evolution.scss
@@ -335,8 +335,7 @@ h3 {
     .video-container {
       float: left;
       width: 25%;
-      margin-left: 5%;
-      padding: 1em 0 0;
+      padding: 1em 5% 0;
       text-align: center;
       img.video_thumbnail {
         width: 100%;
